--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+# Gradle
 /.gradle
 /build
+
+#IntelliJ
 /run
 /out
 /.idea
@@ -8,4 +11,8 @@
 /*.iws
 /*.iml
 *.jar
+
+# Gradle Wrapper
 !/gradle/wrapper/gradle-wrapper.jar
+
+build_number.properties
