--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,10 @@
 ############
 # Versions #
 ############
-minecraft_version=1.8.9
+minecraft_version=1.9
 #mappings=snapshot_20141130
-mappings=snapshot_20160229
-forge_version=11.15.1.1764
+mappings=snapshot_20160319
+forge_version=12.16.0.1770-1.9
 
 #########
 # other #
