Update to Minecraft 1.9 (hopefully) complete
Finished updating everything to work with Minecraft 1.9.

--- a/build.gradle
+++ b/build.gradle
@@ -122,7 +122,7 @@ jar {
 }
 
 dependencies {
-    deobfCompile "mezz.jei:jei_${config.minecraft_version}:${config.JEI_version}"
+    compile "mezz.jei:jei_${config.minecraft_version}:${config.JEI_version}"
 }
 
 idea {
