Finished update to 1.9

--- a/build.gradle
+++ b/build.gradle
@@ -81,8 +81,9 @@ minecraft {
     replaceIn 'src/main/scala/net/fishdog5000/core/FishdogsCore.scala'
     replace "@COREVERSION@", project.version
     replace "@MCVERSION@", config.minecraft_version
-    replace ")//@DEPEND@//(", ", "
-    replace "@FORGEVERSION@", config.forge_version
+    replace 'acceptedMinecraftVersions = ""', 'acceptedMinecraftVersions = "' + config.minecraft_version + '"'
+    //replace ")//@DEPEND@//(", ", "
+    //replace "@FORGEVERSION@", config.forge_version
 
     replaceIn 'src/main/scala/net/fishdog5000/core/CoreConstants.scala'
     replace "true//@FALSE@", "false"
