--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,9 @@
 ############
 # Versions #
 ############
-minecraft_version=1.9
-mappings=snapshot_20160322
-forge_version=12.16.0.1805-1.9
+minecraft_version=1.9.4
+mappings=snapshot_20160518
+forge_version=12.17.0.1963
 
 #########
 # other #
@@ -14,8 +14,8 @@ group=net.fishdog5000
 # Core #
 ########
 core_major=2
-core_minor=0
-core_patch=1
+core_minor=1
+core_patch=0
 core_release_type=beta
 core_archivesBaseName=Fishdog5000sCore
 
@@ -25,5 +25,5 @@ core_archivesBaseName=Fishdog5000sCore
 #nei_version=1.0.5.104
 #code_chicken_core_version=1.0.5.36
 #code_chicken_lib_version=1.1.2.133
-IGWMod_version=1.2.4-4
-JEI_version=3.0.6.169
+IGWMod_version=1.3.0-5
+JEI_version=3.+
