--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,10 @@
 ############
 # Versions #
 ############
-minecraft_version=1.10
-mappings=snapshot_20160518
-forge_version=12.18.0.1986-1.10.0
+minecraft_version=1.10.2
+supported_versions=[1.9.4,1.10.999]
+mappings=snapshot_20160702
+forge_version=12.18.0.2006-1.10.0
 
 #########
 # other #
